# swagger/data-exchage-swagger.json
@@ -177,7 +177,7 @@
             "in": "body",
             "name": "body",
             "schema": {
-              "$ref": "#/definitions/CollectionForm"
+              "$ref": "#/definitions/Collection_req"
             },
             "required": true
           }
@@ -466,27 +466,6 @@
         }
       }
     },
-    "CollectionForm": {
-      "type": "object",
-      "properties": {
-        "collectionName": {
-          "type": "string"
-        },
-        "endPoint": {
-          "type": "string",
-          "default": "local"
-        },
-        "type": {
-          "type": "string"
-        },
-        "example": {
-          "type": "object"
-        },
-        "isOpen": {
-          "type": "boolean"
-        }
-      }
-    },
     "Collection": {
       "type": "object",
       "properties": {
@@ -510,6 +489,67 @@
         }
       }
     },
+    "Collection_req": {
+      "type": "object",
+      "properties": {
+        "collectionName": {
+          "type": "string"
+        },
+        "endPoint": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "string",
+              "description": "location of data",
+              "example": "local or remote"
+            },
+            "url": {
+              "type": "string",
+              "description": "url for request (remote only)"
+            },
+            "headers": {
+              "type": "object",
+              "description": "headers for request (remote only)",
+              "properties": {
+                "headers_0": {
+                  "type": "string"
+                },
+                "headers_1": {
+                  "type": "string"
+                },
+                "header_...": {
+                  "type": "string"
+                }
+              }
+            },
+            "queryString": {
+              "type": "object",
+              "description": "query string for request (remote only)",
+              "properties": {
+                "queryString_1": {
+                  "type": "string"
+                },
+                "queryString_2": {
+                  "type": "string"
+                },
+                "queryString_...": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "type": {
+          "type": "string"
+        },
+        "example": {
+          "type": "object"
+        },
+        "isOpen": {
+          "type": "boolean"
+        }
+      }
+    },
     "Data": {
       "type": "object",
       "properties": {
@@ -527,20 +567,6 @@
         }
       }
     },
-    "Ticket_req": {
-      "type": "object",
-      "properties": {
-        "collectionId": {
-          "type": "string",
-          "description": "collectionId"
-        },
-        "expire": {
-          "type": "integer",
-          "description": "in days (default is 180 days)",
-          "default": 180
-        }
-      }
-    },
     "Credit": {
       "type": "object",
       "properties": {
@@ -552,6 +578,20 @@
         },
         "credits": {
           "type": "number"
+        }
+      }
+    },
+    "Ticket_req": {
+      "type": "object",
+      "properties": {
+        "collectionId": {
+          "type": "string",
+          "description": "collectionId"
+        },
+        "expire": {
+          "type": "integer",
+          "description": "in days (default is 180 days)",
+          "default": 180
         }
       }
     },
